--- a/css/main.css
+++ b/css/main.css
@@ -968,8 +968,7 @@ html {
   .align-self-xl-stretch {
     align-self: stretch !important; } }
 body {
-  background: #FBFCFD;
-  padding-bottom: 200px; }
+  background: #FBFCFD; }
 
 .centred {
   display: block;
@@ -1197,5 +1196,47 @@ header {
     font-size: 1em;
     margin-top: 10px;
     color: rgba(255, 255, 255, 0.6); }
+
+.join-us {
+  position: relative;
+  padding-top: 80px;
+  padding-bottom: 60px;
+  margin-bottom: 40px;
+  margin-top: 60px;
+  min-height: 420px;
+  width: 100%;
+  background: url(../img/map.png);
+  background-repeat: no-repeat;
+  background-position: center; }
+  .join-us .join-us-form input {
+    border-radius: 100px 0px 0px 100px;
+    border: 1px;
+    border-right: 0px;
+    border-style: solid;
+    border-color: rgba(103, 124, 145, 0.36);
+    padding: .8em 1.6em;
+    min-width: 300px; }
+  .join-us .join-us-form button {
+    border-radius: 0 100px 100px 0;
+    background: #52A7F8;
+    border: 1px solid #52A7F8;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding: .8em 1.6em;
+    text-transform: uppercase; }
+
+footer {
+  position: relative;
+  background: #1a293e; }
+  footer .footer {
+    position: relative;
+    width: 100%;
+    background: transparent;
+    height: 300px; }
+  footer .copyright {
+    position: relative;
+    height: 80px;
+    width: 100%;
+    background: #18263a; }
 
 /*# sourceMappingURL=main.css.map */
