--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -43,6 +43,20 @@ hr {
   border-color: rgba(203,214,225,1);
 }
 
+::-webkit-input-placeholder { /* Chrome */
+  color: #374C61;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #374C61;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #374C61;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: #374C61;
+  opacity: 1;
+}
 header {
   position: fixed;
   height: 80px;
@@ -367,10 +381,11 @@ footer {
     width: 100%;
     background: transparent;
     height: 300px;
-    padding-top: 100px;
+    padding-top: 70px;
     ul {
       padding: 0;
       list-style: none;
+      padding-top: 30px;
       li {
         font-size: .875em;
         padding-bottom: 16px;
@@ -380,6 +395,26 @@ footer {
       }
     }
   }
+
+  h5 {
+    text-align: left;
+    color:#c6c8ca;
+    font-size: 1.1em;
+    margin-top: 30px;
+  }
+
+  p {
+    font-size: .75em;
+    color: #c6c8ca;
+    text-align: left;
+    opacity: .7;
+    line-height: 18px;
+
+    a {
+      color: #c6c8ca;
+    }
+  }
+
   .copyright {
     position: relative;
     height: 80px;
@@ -388,5 +423,22 @@ footer {
     color: #c6c8ca;
     background: #18263a;
     font-size: .875em;
+
+    .email:before {
+      background: url(https://static.helpjuice.com/assets/marketing/icons/footer-email@2x-8593b25….png) center center no-repeat;
+      background-size: 16px auto;
+      width: 16px;
+      height: 12px;
+      top: calc(50% - 6px);
+    }
+
+    .phone:before {
+        background: url(https://static.helpjuice.com/assets/marketing/icons/footer-phone@2x-53e8e34….png) center center no-repeat;
+        background-size: 12px auto;
+        width: 12px;
+        height: 16px;
+        top: calc(50% - 8px);
+        left: 5px;
+    }
   }
 }
