--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,6 +5,7 @@
 body {
   background: #FBFCFD;
   //padding-bottom: 200px;
+  font-family: "proxima-nova", helvetica, arial, sans-serif;
 }
 
 .centred {
@@ -57,6 +58,77 @@ hr {
   color: #374C61;
   opacity: 1;
 }
+
+.navbar {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  padding-top: 0;
+  padding-bottom: 0;
+  background: white;
+  box-shadow: 0 4px 9px 0 rgba(19,37,57,0.1);
+  //padding: 0;
+
+  //padding: 1.1567rem 1rem;
+  .navbar-brand {
+    margin-right: 50px;
+  }
+  .navbar-nav {
+      .nav-item {
+        padding-left: .7rem;
+        padding-right: .7rem;
+        //padding: 29px 1rem 0 1rem;
+
+        a.nav-link {
+          color: $dark-menu-color;
+          font-size: 0.875em;
+          padding-top: 1.95rem;
+          padding-bottom: 1.55rem;
+
+          &:hover, &:active {
+            color: $blue-bg;
+          }
+          //padding: 0;
+          //padding-bottom: 27px
+        }
+
+        a.active {
+          color: $blue-bg;
+          border-bottom: 3px solid $blue-bg;
+        }
+      }
+    }
+
+  .header-ctas {
+    position: relative;
+    margin: 20px 0;
+    float: right;
+
+    .btn {
+      padding: .8em 1.6em;
+      border-radius: 10em;
+      font-size: 0.875em;
+    }
+
+    .signup-btn {
+      background: $green-bg;
+      color: white;
+    }
+
+    .demo-btn {
+      background: $blue-bg;
+      color: white;
+      margin-left: 5px;
+    }
+
+
+  }
+}
+
+.bg-white {
+  background-color: white;
+}
+
 header {
   position: fixed;
   height: 80px;
@@ -440,5 +512,98 @@ footer {
         top: calc(50% - 8px);
         left: 5px;
     }
+  }
+}
+
+//Navbar behavior on Mobile
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+      padding-right: 0;
+      padding-left: 0;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .button-li {
+    display: none;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .header-ctas {
+    display: none;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .navbar {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .navbar-light .navbar-toggler {
+    color: $dark-menu-color;
+    border: 0;
+  }
+
+  .navbar-toggler {
+    padding: 0;
+  }
+
+  .navbar-light .navbar-toggler-icon {
+    background-image: url(../img/togglers.svg);
+  }
+
+  .navbar .navbar-nav .nav-item a.nav-link {
+    padding: 0;
+  }
+  .nav-item {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid rgba(103, 124, 154, 0.15);
+    a {
+      text-align: center;
+    }
+  }
+
+  .button-li {
+    padding-top: .4em;
+    padding-bottom: .4em;
+    //margin-bottom: 10px;
+
+    a.nav-link {
+      padding-top: .9em;
+      padding-bottom: .9em;
+      text-align: center;
+      color: white !important;
+      text-decoration: none;
+      border-radius: 100px;
+      text-transform: uppercase;
+      font-size: 0.875em;
+      display:block;
+      margin: auto;
+      width: 300px;
+    }
+    .demo-li-btn {
+      background: $blue-bg;
+    }
+
+    .signup-li-btn {
+      background: $green-bg;
+      //padding-top: 17px;
+    }
+    .nav-item:last-child {
+      margin-bottom: 20px;
+    }
+  }
+
+  .navbar .navbar-nav .nav-item a.active {
+    color: #52A7F8;
+    border-bottom: 0;
+  }
+
+  .navbar .navbar-nav .nav-item {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
