--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@ $dark-title-color: #4B5E71;
 $dark-p-color: #677C91;
 $green-title-color: #20D291;
 
+$proxima: "proxima-nova", helvetica, arial, sans-serif;
+
 
 // Bootstrap Grid only
 //
