--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -47,7 +47,7 @@ p {
 
 hr {
   margin: 80px auto 100px;
-  border-color: rgba(203,214,225,1);
+  border-color: rgba(203, 214, 225, 0.43);
 }
 
 @include media-breakpoint-down(sm) {
@@ -531,8 +531,9 @@ footer {
     position: relative;
     width: 100%;
     background: transparent;
-    height: 300px;
-    padding-top: 70px;
+    min-height: 300px;
+    padding-top: 60px;
+    padding-bottom: 10px;
     ul {
       padding: 0;
       list-style: none;
@@ -569,9 +570,10 @@ footer {
 
   .copyright {
     position: relative;
-    height: 80px;
+    min-height: 80px;
     width: 100%;
     padding-top: 30px;
+    padding-bottom: 30px;
     color: #c6c8ca;
     background: #18263a;
     font-size: .875em;
@@ -591,6 +593,21 @@ footer {
         height: 16px;
         top: calc(50% - 8px);
         left: 5px;
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  footer {
+    .copyright {
+      text-align: center;
+      .phone, .email {
+        padding-top: 10px;
+        //line-height:  40px;
+        display: inline-block;
+        opacity: .7;
+
+      }
     }
   }
 }
