join-us form pushed down

--- a/css/main.css
+++ b/css/main.css
@@ -1319,22 +1319,24 @@ header {
   background: url(../img/map.png);
   background-repeat: no-repeat;
   background-position: center; }
-  .join-us .join-us-form input {
-    border-radius: 100px 0px 0px 100px;
-    border: 1px;
-    border-right: 0px;
-    border-style: solid;
-    border-color: rgba(103, 124, 145, 0.36);
-    padding: .8em 1.6em;
-    min-width: 300px; }
-  .join-us .join-us-form button {
-    border-radius: 0 100px 100px 0;
-    background: #52A7F8;
-    border: 1px solid #52A7F8;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding: .8em 1.6em;
-    text-transform: uppercase; }
+  .join-us .join-us-form {
+    margin-top: 40px; }
+    .join-us .join-us-form input {
+      border-radius: 100px 0px 0px 100px;
+      border: 1px;
+      border-right: 0px;
+      border-style: solid;
+      border-color: rgba(103, 124, 145, 0.36);
+      padding: .8em 1.6em;
+      min-width: 300px; }
+    .join-us .join-us-form button {
+      border-radius: 0 100px 100px 0;
+      background: #52A7F8;
+      border: 1px solid #52A7F8;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      padding: .8em 1.6em;
+      text-transform: uppercase; }
 
 @media (max-width: 767px) {
   .join-us-input {
