--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -484,6 +484,7 @@ header {
     //background-size: cover;
 
     .join-us-form {
+      margin-top: 40px;
       input {
         border-radius: 100px 0px 0px 100px;
         border: 1px;
